@@ -3,7 +3,12 @@ Version ?.?.?
     - fixed read part of GenICam file access (FileProtocolAdapter.i)
     - fixed a bug where Pythons memory allocation was used without holding the GIL
     - amended readme.md
-    - use SWIG 4.0.0
+    - Use SWIG 4.0.0 and removed SWIGs legacy handling for boolean parameters.
+      This means that APIs that expect a boolean parameter and had accepted
+      any Python type in the past (since any Python type can be fed into
+      'bool()'), NO LONGER accept anything other than true Python 'bool' objects.
+      E.g. where in the past 'IBoolean.SetValue("Hello")' was OK, it is now
+      required to use code like this 'IBoolean.SetValue(bool("Hello"))'.
 
 Version 1.4.0
     - Date 2019-03-13
